rtg_tests/negative/unaddressable_array_slice/cmd/app/main.go
package main

func main() {
	part := [3]int{1, 2, 3}[:]
	_ = part
}
